--- a/index.html
+++ b/index.html
@@ -98,33 +98,33 @@
 				</div>
 				<div class="col-lg-4 mb-4">
 					<div class="post-entry-alt">
-						<a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html" class="img-link"><img src="images/take_a_bite_of_sweden_horizontal.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="img-fluid"></a>
+						<a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html" class="img-link"><img src="images/take_a_bite_of_sweden_horizontal.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="img-fluid"></a>
 						<div class="excerpt">							
 
-							<h2><a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</a></h2>
+							<h2><a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</a></h2>
 							<div class="post-meta align-items-center text-left clearfix">
 								<span class="d-inline-block mt-1">Posted on</span>
 								<span>&nbsp;-&nbsp; October 11, <span class="currentYear"></span></span>
 							</div>
 
 							<p>When you are confident enough to try out fishes with a very pungent aroma and strong acidic taste then you can take a bite of Sweden’s strongest fermented fish- Surstromming.</p>
-							<p><a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html" class="read-more">Continue Reading</a></p>
+							<p><a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html" class="read-more">Continue Reading</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 mb-4">
 					<div class="post-entry-alt">
-						<a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html" class="img-link"><img src="images/allow_your_taste_buds_horizontal.jpg" alt="Intense Flavors with Surstromming" class="img-fluid"></a>
+						<a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html" class="img-link"><img src="images/allow_your_taste_buds_horizontal.jpg" alt="Intense Flavors with Surstromming" class="img-fluid"></a>
 						<div class="excerpt">							
 
-							<h2><a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">Allow your Taste Buds to Experience Intense Flavors with Surstromming</a></h2>
+							<h2><a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">Allow your Taste Buds to Experience Intense Flavors with Surstromming</a></h2>
 							<div class="post-meta align-items-center text-left clearfix">
 								<span class="d-inline-block mt-1">Posted on</span>
 								<span>&nbsp;-&nbsp; October 4, <span class="currentYear"></span></span>
 							</div>
 
 							<p>If you are a die-hard fish lover that can enjoy mild as well as intense fishes then you must allow your taste buds to experience intense flavors with Surstromming.</p>
-							<p><a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html" class="read-more">Continue Reading</a></p>
+							<p><a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html" class="read-more">Continue Reading</a></p>
 						</div>
 					</div>
 				</div>
@@ -347,17 +347,17 @@
 				</div>
 				<div class="col-lg-4 mb-4">
 					<div class="post-entry-alt">
-						<a href="Roda ulven surstromming.html" class="img-link"><img src="images/roda_ulven_surstromming_horizontal.jpg" alt="Roda ulven surstromming" class="img-fluid"></a>
+						<a href="roda-ulven-surstromming.html" class="img-link"><img src="images/roda_ulven_surstromming_horizontal.jpg" alt="Roda ulven surstromming" class="img-fluid"></a>
 						<div class="excerpt">
 							
-							<h2><a href="Roda ulven surstromming.html">Roda ulven surstromming</a></h2>
+							<h2><a href="roda-ulven-surstromming.html">Roda ulven surstromming</a></h2>
 							<div class="post-meta align-items-center text-left clearfix">
 								<span class="d-inline-block mt-1">Posted on</span>
 								<span>&nbsp;-&nbsp; June 26, <span class="currentYear"></span></span>
 							</div>
 
 							<p>Roda ulven surstromming – a leading brand. Roda Ulven – The Red Wolff – was the brand that mad sustromming in cans famous.</p>
-							<p><a href="Roda ulven surstromming.html" class="read-more">Continue Reading</a></p>
+							<p><a href="roda-ulven-surstromming.html" class="read-more">Continue Reading</a></p>
 						</div>
 					</div>
 				</div>
@@ -381,17 +381,17 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="post-entry-alt">
-						<a href="Mail-order surstromming from sweden.html" class="img-link"><img src="images/mail_order_surstromming_from_sweden_horizontal.jpg" alt="Mail-order surstromming" class="img-fluid"></a>
+						<a href="surstromming/mailorder-surstromming-from-sweden.html" class="img-link"><img src="images/mail_order_surstromming_from_sweden_horizontal.jpg" alt="Mail-order surstromming" class="img-fluid"></a>
 						<div class="excerpt">
 							
-							<h2><a href="Mail-order surstromming from sweden.html">Mail-order surstromming from sweden</a></h2>
+							<h2><a href="surstromming/mailorder-surstromming-from-sweden.html">Mail-order surstromming from sweden</a></h2>
 							<div class="post-meta align-items-center text-left clearfix">
 								<span class="d-inline-block mt-1">Posted on</span>
 								<span>&nbsp;-&nbsp; June 15, <span class="currentYear"></span></span>
 							</div>
 
 							<p>Order surstromming from Sweden by mail-order. We ship surstromming word wide. Affordable prices and realistic freight prices by mail order.</p>
-							<p><a href="Mail-order surstromming from sweden.html" class="read-more">Continue Reading</a></p>
+							<p><a href="surstromming/mailorder-surstromming-from-sweden.html" class="read-more">Continue Reading</a></p>
 						</div>
 					</div>
 				</div>
@@ -457,7 +457,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">
+									<a href="./surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">
 										<img src="images/take_a_bite_of_sweden_sq.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="me-4 rounded">
 										<div class="text">
 											<h4>Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</h4>
@@ -468,7 +468,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">
+									<a href="./surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">
 										<img src="images/allow_your_taste_buds_sq.jpg" alt="Experience Intense Flavors with Surstromming" class="me-4 rounded">
 										<div class="text">
 											<h4>Allow your Taste Buds to Experience Intense Flavors with Surstromming</h4>
