--- a/roda-ulven-surstromming.html
+++ b/roda-ulven-surstromming.html
@@ -7,8 +7,8 @@
   <meta name="author" content="">
   
 
-  <meta name="description" content="Sweden has produced several food delicacies and one relatively unknown delicacy that is slowly catching global interest is Surstromming or sour herring. This fermented fish produces extreme reactions upon opening the can since it is [...]" />
-  <meta name="keywords" content="pungent delicacy, surstromming, fermented fish" />
+  <meta name="description" content="roda ulven surstromming surstromming &gt; roda ulven surstromming Roda ulven surstromming – a leading brand Roda ulven surstromming – a leading brand. Roda Ulven – The Red Wolff – was the brand that mad sustromming [...]" />
+  <meta name="keywords" content="bob broke, surstromming usa, surstromming hollywood, roda ulven" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/flatpickr.min.css">
 
 
-  <title>Go Online to Order for Sweden’s Pungent Delicacy – Surstromming - buy-surstromming</title>
+  <title>Roda ulven surstromming - buy-surstromming</title>
 </head>
 <body>
 
@@ -74,28 +74,22 @@
         <div class="col-md-12 col-lg-8 main-content">
 
           <div class="post-entry text-left">
-            <h1 class="mb-4">Go Online to Order for Sweden’s Pungent Delicacy – Surstromming</h1>
+            <h1 class="mb-4">Roda ulven surstromming</h1>
             <div class="post-meta align-items-left text-left">
               <span class="d-inline-block mt-1">Posted on</span>
-              <span>&nbsp;-&nbsp; August 8, <span class="currentYear"></span></span>
+              <span>&nbsp;-&nbsp; June 26, <span class="currentYear"></span></span>
             </div>
           </div>
 
           <div class="post-content-body">
             <div class="row my-4">
               <div class="col-md-12 mb-4">
-                <img src="images/surstromming.jpg" alt="Order for Sweden’s Pungent Delicacy" class="img-fluid rounded">
+                <img src="images/roda_ulven_surstromming.jpg" alt="Roda ulven surstromming" class="img-fluid rounded">
               </div>
             </div>
-            <p>Sweden has produced several food delicacies and one relatively unknown delicacy that is slowly catching global interest is Surstromming or sour herring. This fermented fish produces extreme reactions upon opening the can since it is quite an intense fish in terms of aroma and taste.</p>
-            <p>Surstromming is herring that is fished in Sweden’s surrounding Baltic Sea during the months of April and May. The fishes are then left to ferment in wooden barrels along with strong brine solution that is changed to a milder version during the fermentation process.</p>
-            <p>The canning process takes place during the month of July by which time the herring emit a strong aroma and acidic taste due to the formation of several acids and gases during the fermentation process. In fact, this process continues to take place within the cans causing them to bulge outwards.</p>
-            <p>Until now, cans of Surstromming usually lined shelves of supermarkets in Sweden. However, with the advent of the internet and increased shelf life of this fermented fish, people from all over the world have now become aware of this pungent fish. The Japanese love new varieties of fish and have taken a keen interest in ordering Surstromming from trusted online stores that now deliver this herring to a global clientele.</p>
-            <p>You can also take a bite of this intense fish by visiting a reliable online store and placing orders with a few clicks of your mouse. You can be sure that cans of this fish will be delivered to your chosen destination. You can then call over close friends and family to share Surstromming just like the Swedes.</p>
-            <p>However, care must be taken while opening the cans and eating Surstromming. For starters, you must share this intensely flavored fish only with fish enthusiasts that can handle such pungent fish. In addition, you must not open the can indoors since the powerful aroma that escapes the can upon opening can overwhelm you and those in the room.</p>
-            <p>You should open the can in an outdoor setting preferably in a basin of water to relieve the pressure and aroma of this strong fish. The Swedes enjoy this fish with their thin bread that is either in crisp or soft form according to their liking. You can do the same and also add onions that have been diced along with boiled potatoes that have been sliced, to reduce the pungency of the fish and achieve a much more balanced flavor.</p>
-            <p>A glass of cold milk or chilled beer also helps in reducing the intensity of the acidic taste of Surstromming. Of course, you can always have fun in trying out new ingredients that can help you enjoy eating this fermented fish from Sweden. Your friends and family can provide valuable feedback once they take the first bite and you can be sure that you will receive highly animated reviews of this intense fish from your loved ones.</p>
-            <p>Surstromming has been a Swedish delicacy since ages and you too can now understand why the Swedes love this pungent fermented fish. You only need to go online to order Surstromming and share this sour herring with other fish enthusiasts that have a strong palate.</p>
+            <p>Roda ulven surstromming – a leading brand. Roda Ulven – The Red Wolff – was the brand that mad sustromming in cans famous. Now all surstromming is sold in cans and there have been fight in court with brand names close to Roda Ulven.</p>
+            <p>Roda ulven surstromming is fermented baltic heering at is best.</p>
+            <p>Bob Broke tells: Sales of surstromming are on the increase in Sweden, but its future as an export item is, predictably, dim. Although 800 cans of it used to be exported annually to Hollywood when a Swedish movie colony could still be found there, U.S. customs officials have since come to view it with suspicion, despite its proven nontoxicity. Moreover, the product doesnt always travel well. Only recently a Swede found this out. Thinking to amaze an important New York client and the assembled board of directors with so bizarre a food, he produced the swollen can he had carried all the way from Sweden in his luggage and dramatically laid it on the table. At that moment, the can exploded.</p>
 
           </div>
 
