--- a/sitemap.html
+++ b/sitemap.html
@@ -79,8 +79,8 @@
 
           <div class="post-content-body">
             <p><a href="Surstromming – A Swedish Fermented Fish to Electrify your Senses.html">Surstromming – A Swedish Fermented Fish to Electrify your Senses</a></p>
-            <p><a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</a></p>
-            <p><a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">Allow your Taste Buds to Experience Intense Flavors with Surstromming</a></p>
+            <p><a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</a></p>
+            <p><a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">Allow your Taste Buds to Experience Intense Flavors with Surstromming</a></p>
             <p><a href="Try Swedish Surstromming to Excite your Taste Buds.html">Try Swedish Surstromming to Excite your Taste Buds</a></p>
             <p><a href="Enjoy Strong Surstromming from Sweden.html">Enjoy Strong Surstromming from Sweden</a></p>
             <p><a href="Experience Intense Flavors with Surstromming from Sweden.html">Experience Intense Flavors with Surstromming from Sweden</a></p>
@@ -94,9 +94,9 @@
             <p><a href="Buy-Surstromming - Fermented heering.html">Buy-Surstromming - Fermented heering</a></p>
             <p><a href="Fermented baltic heering.html">Fermented baltic heering</a></p>
             <p><a href="Good price on fermented fish.html">Good price on fermented fish</a></p>
-            <p><a href="Roda ulven surstromming.html">Roda ulven surstromming</a></p>
+            <p><a href="roda-ulven-surstromming.html">Roda ulven surstromming</a></p>
             <p><a href="Original Swedish fermented fish.html">Original Swedish fermented fish</a></p>
-            <p><a href="Mail-order surstromming from sweden.html">Mail-order surstromming from sweden</a></p>
+            <p><a href="surstromming/mailorder-surstromming-from-sweden.html">Mail-order surstromming from sweden</a></p>
             <p><a href="Purchase surstromming from Sweden.html">Purchase surstromming from Sweden</a></p>
             <br/>
             <p><a href="privacy.html">Privacy</a></p>
@@ -128,7 +128,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">
+                  <a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">
                     <img src="images/take_a_bite_of_sweden_sq.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="me-4 rounded">
                     <div class="text">
                       <h4>Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</h4>
@@ -139,7 +139,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">
+                  <a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">
                     <img src="images/allow_your_taste_buds_sq.jpg" alt="Intense Flavors with Surstromming" class="me-4 rounded">
                     <div class="text">
                       <h4>Allow your Taste Buds to Experience Intense Flavors with Surstromming</h4>
@@ -278,7 +278,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">
+									<a href="./surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">
 										<img src="images/take_a_bite_of_sweden_sq.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="me-4 rounded">
 										<div class="text">
 											<h4>Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</h4>
@@ -289,7 +289,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">
+									<a href="./surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">
 										<img src="images/allow_your_taste_buds_sq.jpg" alt="Experience Intense Flavors with Surstromming" class="me-4 rounded">
 										<div class="text">
 											<h4>Allow your Taste Buds to Experience Intense Flavors with Surstromming</h4>
