--- a/Get that Ultimate Experience with Surstromming from Sweden.html
+++ b/Get that Ultimate Experience with Surstromming from Sweden.html
@@ -121,7 +121,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">
+                  <a href="surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">
                     <img src="images/take_a_bite_of_sweden_sq.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="me-4 rounded">
                     <div class="text">
                       <h4>Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</h4>
@@ -132,7 +132,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">
+                  <a href="surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">
                     <img src="images/allow_your_taste_buds_sq.jpg" alt="Intense Flavors with Surstromming" class="me-4 rounded">
                     <div class="text">
                       <h4>Allow your Taste Buds to Experience Intense Flavors with Surstromming</h4>
@@ -271,7 +271,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming.html">
+									<a href="./surstromming/take-a-bite-of-swedens-strongest-fermented-fish-surstromming.html">
 										<img src="images/take_a_bite_of_sweden_sq.jpg" alt="Take a Bite of Sweden’s Strongest Fermented Fish" class="me-4 rounded">
 										<div class="text">
 											<h4>Take a Bite of Sweden’s Strongest Fermented Fish – Surstromming</h4>
@@ -282,7 +282,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="./Allow your Taste Buds to Experience Intense Flavors with Surstromming.html">
+									<a href="./surstromming/allow-your-taste-buds-to-experience-intense-flavors-with-surstromming.html">
 										<img src="images/allow_your_taste_buds_sq.jpg" alt="Experience Intense Flavors with Surstromming" class="me-4 rounded">
 										<div class="text">
 											<h4>Allow your Taste Buds to Experience Intense Flavors with Surstromming</h4>
